@@ -1,4 +1,3 @@
-
 #-*- coding:utf-8 -*-
 
 """
@@ -105,7 +104,7 @@ class python_workspace(object):
 		if warning_list:
 			return 1
 		return 0
-		
+
 	def run_file(self, path):
 
 		"""
