@@ -17,6 +17,7 @@ You should have received a copy of the GNU General Public License
 along with OpenSesame.  If not, see <http://www.gnu.org/licenses/>.
 """
 
+from libopensesame.py3compat import *
 from openexp._canvas.canvas import canvas
 from openexp._mouse.mouse import mouse
 from libopensesame.exceptions import osexception
