@@ -4,6 +4,9 @@ opensesame (3.0.5~a1-ubuntu1) wily; urgency=medium
     - Fix catching of unexpected errors in multiprocess runner (#382)
     - Don't crash when entering numeric break-if statement in loop
     - Register 'self' when executing conditional statements (for backwards compatibility)
+    - Fix missing py3compat import in joystick
+  * Improvements
+    - Add unit test for required py3compat import and encoding declaration
 
  -- Sebastiaan Mathot <sebastiaan@mantis>  Tue, 01 Dec 2015 17:15:57 +0100
 
